--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,9 @@ android {
 }
 
 dependencies {
-    def nav_version = "2.4.2"
+    implementation 'androidx.test.ext:junit-ktx:1.1.3'
+    androidTestImplementation 'junit:junit:4.13.2'
+    def nav_version = "2.5.0"
     def lifecycle_version = "2.4.1"
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -50,4 +52,8 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation 'com.google.android.material:material:1.6.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    testImplementation 'junit:junit:4.+'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
 }
